# ByteDohnComputer

./: .htaccess  .replit  DHL_API_FREISCHALTUNG.md  EMAIL_SETUP.md  MYSQL_BEISPIELE.md  MYSQL_SETUP.md  Plesk_Deployment_Guide.md  README_MYSQL.md  README_PHP.md  admin_routes.py  admin_routes_backup.py  app.py  app_config.py  checkout.php  config.php  cookies.txt  cookies2.txt  deploy_to_plesk.md  dhl_alternatives.py  dhl_integration.py  dhl_routes.py  email_service.py  fertig-pcs.php  index.php  konfigurator.php  main.py  models.py  passenger_wsgi.py  payment.php  pyproject.toml  replit.md  routes.py  routes_backup.py  save_configuration.php  sendungsverfolgung.php  setup.php  test_email.py  warenkorb.php  warenkorb_add.php  warenkorb_update.php
admin/: index.php  login.php  logout.php
attached_assets/: Pasted-configurator-js-55-Components-loaded-from-server-configurator-js-163-Added-event-listener-for-searc-1752060326879_1752060326880.txt  Pasted-configurator-js-67-Components-loaded-from-server-configurator-js-175-Added-event-listener-for-searc-1752060387129_1752060387130.txt  Pasted-configurator-js-83-Components-loaded-from-server-configurator-js-191-Added-event-listener-for-searc-1752064748108_1752064748109.txt  Pasted-configurator-js-83-Components-loaded-from-server-configurator-js-88-Components-data-loaded-8-c-1752064889922_1752064889924.txt  Pasted-configurator-js-83-Components-loaded-from-server-configurator-js-88-Components-data-loaded-Array-8-1752142400919_1752142400919.txt
backend/: README.md
customer/: auth.py  dashboard.php  login.php  logout.php  (+1 more)
(+74 files in other folders)
