[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "sqlalchemy>=2.0.41",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "flask-dance>=7.1.0",
    "pymysql>=1.1.1",
    "werkzeug>=3.1.3",
    "stripe>=12.3.0",
    "requests>=2.32.4",
    "lxml>=6.0.0",
    "zeep>=4.3.1",
    "python-dotenv>=1.1.1",
]
